--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -162,10 +162,24 @@ $nav-image: $baseurl + "/images/menu.svg";
 	background-color: $content-background-color;
 	color: $content-color;
 
-	h3::before {
+	// h3::before {
+	// 	content: "";
+	// 	@extend hr;
+	// 	margin: 60px 0;
+	// }
+
+	h3 {
+		margin: 45px 0 20px 0;
+	}
+
+	h2 {
+		margin-top: 60px;
+	}
+
+	h2:after {
 		content: "";
 		@extend hr;
-		margin: 60px 0;
+		margin: 20px 0 30px 0;
 	}
 }
 
