added back-to-top feature

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,8 @@
 			</article>
 		</section>
 
+		{% include backToTop.html %}
+
 		<script>
 			document.getElementById("open-nav").addEventListener("click", function () {
 				document.body.classList.toggle("nav-open");
