--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,3 +1,31 @@
+@font-face {
+    font-family: Calleo-Trial;
+    src: url('../fonts/Calleo-Trial-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Calleo-Trial;
+    src: url('../fonts/Calleo-Trial-Bold.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Calleo-Trial;
+    src: url('../fonts/Calleo-Trial-BoldItalic.woff2') format('woff2');
+    font-weight: bold;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: Calleo-Trial;
+    src: url('../fonts/Calleo-Trial-Italic.woff2') format('woff2');
+    font-weight: normal;
+    font-style: italic;
+}
+
 html {
 	height: 100%;
 	max-height: 100%;
@@ -8,7 +36,7 @@ html {
 body {
 	height: 100%;
 	max-height: 100%;
-	font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", sans-serif;
+	font-family: 'Calleo-Trial', sans-serif;
 	//font-family: "Merriweather", serif;
 	letter-spacing: 0.01rem;
 	font-size: 1.8em;
