fixed fonts, backToTop icon, copy button border removed

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -244,7 +244,7 @@ nav > ul {
 
 .nav-item {
 	display: block;
-	font-family: "Open Sans", sans-serif;
+	font-family: 'Calleo-Trial', sans-serif;
 	line-height: 1;
 	margin: 0;
 
@@ -410,7 +410,7 @@ h4 svg {
 }
 
 .badge {
-	font-family: "Open Sans", sans-serif;
+	font-family: 'Calleo-Trial', sans-serif;
 	padding: 2px 5px;
 	text-transform: uppercase;
 	font-size: 0.8rem;
