--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -63,7 +63,7 @@ table {
 	-webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
 	-moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
 	-o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-	font-family: "Open Sans", sans-serif;
+	font-family: 'Calleo-Trial', sans-serif;
 	text-rendering: geometricPrecision;
 }
 
