--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -35,11 +35,9 @@
     color: #FAFAFA;
     background: none;
     cursor:pointer;
-    display: block;
-    margin-top: 10px;
-    margin-left: auto; 
-    margin-right: 0;
+    margin-right: 15px;
     border: none;
+    font-size: 0.85em;
   }
 }
 
