allure and rp reporters releases

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -422,6 +422,11 @@ h4 svg {
 		background: $brand-colour;
 		color: #fff;
 	}
+
+	&.patch {
+		background: #d63535;
+		color: #fff;
+	}
 }
 
 blockquote {
